--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,5 +1,5 @@
 ---
-name: Build and Push Golang Image to AWS ECR
+name: Build and Push Dockerfile Image to AWS ECR
 on:
   push:
     branches: [main]
@@ -25,7 +25,7 @@ jobs:
       - name: Automatic Tagging of Releases
         id: increment-git-tag
         run: |
-          bash ./build/git_update.sh -v major
+          bash ./build_image/git_update.sh -v major
 
       - name: Build, Tag, and Push the Image to Amazon ECR
         id: build-image
