--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
-  "name": "aws-observability-app",
+  "name": "aws-observability",
   "version": "1.0.0",
-  "description": "Simple Node.js app for AWS observability demo",
+  "description": "AWS Observability Demo",
   "main": "app.js",
   "scripts": {
     "start": "node app.js"
   },
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "express-rate-limit": "^7.1.5"
   }
 }
