--- a/package.json
+++ b/package.json
@@ -7,9 +7,10 @@
     "start": "node app.js"
   },
   "dependencies": {
-    "express": "^4.18.2",
-    "express-rate-limit": "^7.1.5",
     "@aws-sdk/client-dynamodb": "^3.0.0",
-    "@aws-sdk/lib-dynamodb": "^3.0.0"
+    "@aws-sdk/lib-dynamodb": "^3.0.0",
+    "aws-xray-sdk": "^3.10.3",
+    "express": "^4.18.2",
+    "express-rate-limit": "^7.1.5"
   }
 }
